2018-04-06 Florian Pein, version 2.0-2

  * new maintainer

  * removed packages in StepR.Rnw that are not required
  
  * added length(seed) == 1 to avoid if case with condition of length > 1 in monteCarloSimulation.R,
    updated tests in test-critVal.R, test-computeBounds.R, test-stepFit.R (reported by Tomas Kalibera)
    
  * updated references in stepR-package.Rd, comouteBounds.Rd, computeStat.Rd, critVal.Rd,
    monteCarloSimulation.Rd, parametricFamily.Rd, penalty.Rd, stepFit.Rd  
    
  * added references to description
  
  * added \donttest to intervalSystem.Rd

2017-05-19 Florian Pein, version 2.0-1

  * small changes in DESCRIPTION and stepR-package.Rd

  * added \donttest to stepR-package.Rd, computeBounds.Rd, critVal.Rs, monteCarloSimulation.Rd,
    stepFit.Rd because of long execution times


2017-05-15 Florian Pein, version 2.0-0

  NEW
  
  * added functions stepFit, critVal, computeStat, computeBounds, monteCarloSimulation:
  
    NAMESPACE: added export(computeStat), export(computeBounds), export(stepFit), export(critVal),
               export(monteCarloSimulation)
  
    added files:
    in R: computeBounds.R, computeStat.R, critVal.R, intervalSystem.R, monteCarloSimulation.R,
          parametricFamily.R, stepFit.R
    in src: CallRoutines.cpp, ColMax.cpp, Compute.cpp, Compute.h, Convolve.cpp, CriticalValuesWeights.cpp,
            Data.cpp, Data.h, DataGauss.cpp, DataGauss.h, DataHsmuce.cpp, DataHsmuce.h, DataMDependentPS.cpp,
            DataMDependentPS.h, DynamicPrograms.cpp, DynamicPrograms.h, InOrdered.cpp, IntervalSystem.cpp,
            IntervalSystem.h, IntervalSystemAll.cpp, IntervalSystemAll.h, IntervalSystemAllLengths.cpp,
            IntervalSystemAllLengths.h, IntervalSystemDyaLen.cpp, IntervalSystemDyaLen.h, 
            IntervalSystemDyaLenLengths.cpp, IntervalSystemDyaLenLengths.h, IntervalSystemDyaPar.cpp,
            IntervalSystemDyaPar.h, IntervalSystemDyaParLengths.cpp, IntervalSystemDyaParLengths.h, 