@@ -1,11 +1,11 @@
 Package: stepR
 Title: Multiscale Change-Point Inference
-Version: 2.0-2
+Version: 2.0-3
 Authors@R: c(person("Pein", "Florian", role = c("aut", "cre"), email = "fpein@uni-goettingen.de"),
     person("Thomas", "Hotz", role = "aut", email = "thomas.hotz@tu-ilmenau.de"),
     person("Hannes", "Sieling", role = "aut", email = "hsielin@uni-goettingen.de"),
     person("Timo", "Aspelmeier", role = "ctb", email = "timo.aspelmeier@mathematik.uni-goettingen.de"))
-Depends: R (>= 3.0.0)
+Depends: R (>= 3.1.0)
 Imports: Rcpp (>= 0.12.3), R.cache (>= 0.10.0), digest (>= 0.6.10),
         stats, graphics, methods
 LinkingTo: Rcpp
@@ -16,11 +16,11 @@ License: GPL-3
 Classification/MSC: 62G08, 92C40, 92D20
 LazyData: yes
 NeedsCompilation: yes
-Packaged: 2018-04-06 12:08:13 UTC; fpein
+Packaged: 2019-01-27 17:03:14 UTC; fpein
 Author: Pein Florian [aut, cre],
   Thomas Hotz [aut],
   Hannes Sieling [aut],
   Timo Aspelmeier [ctb]
 Maintainer: Pein Florian <fpein@uni-goettingen.de>
 Repository: CRAN
-Date/Publication: 2018-04-06 16:25:56 UTC
+Date/Publication: 2019-01-27 18:30:03 UTC
